--- a/KayıtProgramı/Views/Home/Register.cshtml
+++ b/KayıtProgramı/Views/Home/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@using KayıtProgramı.Models
 @model RegisterModel
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @*Bootstrap: HTML, CSS ve JavaScript ile yazılmış kullanışlı, yeniden kullanılabilir kod parçalarından oluşan dev bir koleksiyondur.*@
